objects/Vision__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking__r.Account_Legal_Name__r.Id, Implementation_Tracking__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_Vision_Co_Mingle__c</fullName>
        <label>Adult Vision Co-Mingle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.Anthem_Entity__c</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( Vision_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Vision_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Vision_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Tracking__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COMPLETE PAPERWORK RECEIVED IN IMPL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Team_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Team Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Vision_Co_Mingle__c</fullName>
        <label>Child Vision Co-Mingle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Route_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Route Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Account__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.Automation_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_of_Sale__c</fullName>
        <formula>Implementation_Tracking__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMD_Vendor_Screen__c</fullName>
        <description>EMD is being auto populated and is non-editable.</description>
        <formula>&apos;EMD&apos;</formula>
        <label>EMD Vendor Screen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyemed_Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyemed Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Impressions_Needed__c</fullName>
        <formula>Text(Implementation_Tracking__r.Implementation_Record_ID__r.First_Impressions_Needed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Impressions Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking__r.Group_Number__r.Id, Implementation_Tracking__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Id__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Status__c</fullName>
        <formula>Text(Implementation_Tracking__r.Implementation_Record_ID__r.Implementation_Status__c)</formula>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Type__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Vision</relationshipLabel>
        <relationshipName>Vision</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intake_Type_Migration__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.Intake_Type_Migration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Type Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwnerQueue__c</fullName>
        <formula>Owner:Queue.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwnerQueue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is True If Pending Correction Record Present, Else False.</description>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Date_Assigned__c</fullName>
        <description>[Pratibha]- 02/19- created this field as part of PRDCRM-30096</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVL1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LVL1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVL2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LVL2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVL3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LVL3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.Opportunity.RecordTypeName__c</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Vision_Date__c</fullName>
        <description>Original Vision Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(Owner:User.LastName!=null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Vision__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_SME_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending SME Review Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <description>Intermediate Pending Correction Date field</description>
        <formula>CASE(MOD( Vision_Check_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  Vision_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  Vision_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Families</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Product Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>HYPERLINK( Implementation_Tracking__r.Implementation_Record_ID__r.QuoteId ,  Implementation_Tracking__r.Implementation_Record_ID__r.Quote.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reissue_Certificates__c</fullName>
        <label>Reissue Certificates?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>Implementation_Tracking__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
                <value>
                    <fullName>01A Assign to UW</fullName>
                    <isActive>false</isActive>
                    <label>01A Assign to UW</label>
                </value>
                <value>
                    <fullName>01AA Submitted To CIC</fullName>
                    <isActive>false</isActive>
                    <label>01AA Submitted To CIC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coding Complete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Rate Guarantee - no action needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Vision Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Vision Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,
CASE(MOD( Original_Vision_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Vision_Date__c)/7)*5)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <label>Upsell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Benefit_Level_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Benefit Level Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Check_Date__c</fullName>
        <description>Captures Date When The Vision Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Vision Check Field Is True</inlineHelpText>
        <label>Vision Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Check__c</fullName>
        <description>US16784</description>
        <formula>IF(
AND( 
  Implementation_Tracking__r.SBC_Approved__c, 
   
    Implementation_Tracking__r.UW_Approved__c, 
    Implementation_Tracking__r.UW_Life_Disability_Approved__c, 
    Implementation_Tracking__r.UW_Medical_Approved__c, 
    Implementation_Tracking__r.UW_Vision_Approved__c, 
  Implementation_Tracking__r.InterPlan_Approved__c),
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Sold__c</fullName>
        <description>This indicated if any Vision QLI has been sold or not.</description>
        <formula>IF(Implementation_Tracking__r.Implementation_Record_ID__r.Quote.Number_of_Vision_Product_Sold__c &gt;=1,True,False)</formula>
        <label>Vision Product Sold</label>
        <type>Checkbox</type>
    </fields>
    <label>Vision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Implementation_Case_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Vision_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>All Vision - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Vision</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOwnerQueue__c</field>
            <operation>equals</operation>
        </filters>
        <label>Assigned Vision</label>
    </listViews>
    <listViews>
        <fullName>My_Vision_Implementations</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pending_Correction_Stage__c</columns>
        <columns>Upsell__c</columns>
        <columns>Impacted_Products__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Intake_Type_Migration__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <filters>
            <field>Implementation_Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Implementation Completed</value>
        </filters>
        <filters>
            <field>Implementation_Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn</value>
        </filters>
        <label>My Vision Implementations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_groups_and_Upsells_Queue_Vision</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Upsell__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Impacted_Products__c</columns>
        <columns>First_Impressions_Needed__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Intake_Type_Migration__c</columns>
        <filterScope>Queue</filterScope>
        <label>New groups and Upsells Queue</label>
        <queue>New_groups_and_Upsells_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Renewals_and_Offcycle_Change_Queue</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Upsell__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Impacted_Products__c</columns>
        <columns>First_Impressions_Needed__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Intake_Type_Migration__c</columns>
        <filterScope>Queue</filterScope>
        <label>Renewals/Off-cycle/Term Queue</label>
        <queue>Renewals_and_Offcycle_Changes_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Situs_State__c</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOwnerQueue__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Unassigned</label>
    </listViews>
</CustomObject>